the wiki's stylesheet is now retrieved from the right url

--- a/public/widgets/newWikipedia/wikibot.html
+++ b/public/widgets/newWikipedia/wikibot.html
@@ -89,8 +89,8 @@
             
             function wikiReq(kword){
 
-             	if ($('window').height() < 350){
-             			window.resizeTo($('window').width(),680);
+             	if ($(window).height() < 350){
+             			window.resizeTo($(window).width(),400);
           		};
 
           		oldInc = inc; 
