--- a/public/widgets/wikipedia/wikibot.html
+++ b/public/widgets/wikipedia/wikibot.html
@@ -56,7 +56,7 @@
                 window.resizeTo(350, 450);
               }
               
-              if(ubHistoryList.length > 0){
+              if(ubHistoryList !== ""){
                 appHistory.list = ubHistoryList.split(",");
                 appHistory.index = parseInt(ubHistoryIndex);
                 wikiReq(appHistory.list[appHistory.index]);
