change wiki mode

--- a/public/widgets/wiktionary/wikibot.html
+++ b/public/widgets/wiktionary/wikibot.html
@@ -17,7 +17,7 @@
         
         <script type="text/javascript">
             var browsing = false;
-            var mode = 'wiki';
+            var mode = 'wiktionary';
         	  var lang = 'en';
             var internalChange = false;
             var toolbar = {
