--- a/public/widgets/videopicker.wgt/locales/en/howto.html
+++ b/public/widgets/videopicker.wgt/locales/en/howto.html
@@ -6,7 +6,7 @@
 	<img src="imgs/info_ico.png" id="info-ico">
 	<div class="column">
 		<h1>Video picker</h1>
-		<p class="spacer">Utilisez l'adresse URL d'une page Web proposant des vidéos pour en afficher le contenu.</p>
+		<p class="spacer">Paste the url of any webpage providing videos in the text box to show it's content.</p>
 		<img class="lspacer" src="imgs/logos_web.jpg">
 
 		<h1>Usage</h1>
