--- a/public/widgets/wiktionary/wikibot.html
+++ b/public/widgets/wiktionary/wikibot.html
@@ -52,7 +52,7 @@
               if(window.uniboard){
                 ubHistoryList = loadPref("historyList", "");
                 ubHistoryIndex = loadPref("historyIndex", "-1");
-                window.resizeTo(350, 450);
+                //window.resizeTo(350, 450);
               }
               
               if(ubHistoryList !== ""){
