New version of the player with embedded mode support

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@ UbLoader.init('../uniboard-player/');
 </head>
 <body style="margin: 0; width: 100%; text-align: center;">
 <div id="sankore-preview">
-<a href="javascript:void(0)" onclick="UbLoader.launchPlayer('/player/demo/ubw/', 5); return false;" title="Click to preview">
+<a href="javascript:void(0)" onclick="UbLoader.launchPlayer('/player2/demo/ubw/', 5, 'fs', 'body'); return false;" title="Click to preview">
 <img src="./ubw/page001.thumbnail.jpg" width="562" height="562" />
 </a>
 </div>
