--- a/demo/viewembed.html
+++ b/demo/viewembed.html
@@ -3,8 +3,12 @@
 <script type="text/javascript" src="../uniboard-player/scripts/jquery.min.js"></script>
 <script type="text/javascript" src="../uniboard-player/scripts/ubloader.js"></script>
 <script type="text/javascript">
+// This loads the player Javascript code available at ../uniboard-player from where the demo files are located
+// If the demo files are at http://server:port/player/demo/ the player files should be at http://server:port/player/uniboard-player/
 UbLoader.init('../uniboard-player/');
-UbLoader.launchPlayer('/player2/demo/ubw/', 5, "embed", "#sankore-view");
+// This loads the UBW file available on http://server:port/player/demo/ubw/
+// You can also specify an absolute URL
+UbLoader.launchPlayer('/player/demo/ubw/', 6, "embed", "#sankore-view");
 </script>
 </head>
 <body style="margin: 0; padding-top: 50px; width: 100%; text-align: center;">
