--- a/demo/viewembed.html
+++ b/demo/viewembed.html
@@ -1,3 +1,6 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
 <script type="text/javascript" src="../uniboard-player/scripts/jquery.min.js"></script>
@@ -6,9 +9,9 @@
 // This loads the player Javascript code available at ../uniboard-player from where the demo files are located
 // If the demo files are at http://server:port/player/demo/ the player files should be at http://server:port/player/uniboard-player/
 UbLoader.init('../uniboard-player/');
-// This loads the UBW file available on http://server:port/player/demo/ubw/
+// This loads the UBW file available on http://server:port/player/demo/ubw3/
 // You can also specify an absolute URL
-UbLoader.launchPlayer('/player/demo/ubw/', 6, "embed", "#sankore-view");
+UbLoader.launchPlayer('/player/demo/ubw3/', 15, "embed", "#sankore-view");
 </script>
 </head>
 <body style="margin: 0; padding-top: 50px; width: 100%; text-align: center;">
