--- a/uniboard-player/player.html
+++ b/uniboard-player/player.html
@@ -1,11 +1,18 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
 <!-- jQuery -->
 <script type="text/javascript" src="scripts/jquery.min.js"></script>
+<script type="text/javascript" src="scripts/jquery.easing.js"></script>
+<!--
 <script type="text/javascript" src="scripts/jquery-ui-1.8rc3.custom.min.js"></script>
-<script type="text/javascript" src="scripts/jquery.easing.1.3.js"></script>
+-->
 <!-- SwipeListener for iPad/iPhone -->
+<!--
 <script type="text/javascript" src="scripts/swipeListener.js"></script>
+-->
 <!-- Uniboard-player -->
 <script type="text/javascript" src="scripts/ubplayer.js"></script>
 <script type="text/javascript" src="scripts/ubplayer.player.js"></script>
