--- a/uniboard-player/player.html
+++ b/uniboard-player/player.html
@@ -33,7 +33,7 @@ jQuery(document).ready(function() {
     <div id="head">
         <div id="document-links">
             <ul class="menu-list">
-                <li id="head-list-close"><a id="quitFullscreen" href="javascript:void(0)">Exit full-screen view</a></li>
+                <li id="head-list-close"><a id="quitFullscreen" href="javascript:void(0)">Fermer</a></li>
             </ul>
         </div>
     </div>
