Fix loading of player.html page for each thumbnail

--- a/uniboard-player/player.html
+++ b/uniboard-player/player.html
@@ -59,6 +59,7 @@ jQuery(document).ready(function() {
                 <div id="thumbnails-slider"><div class="thumbnails-slider-page"></div></div>
                 <div id="thumbnail-previous"></div>
                 <div id="thumbnails-canvas">
+			<div class="thumbnail"><img class="thumb-img" src="" alt="thumbnail" height="100%" width="auto"/></div>
                 </div>
                 <div id="thumbnail-next"></div>
             </div><!--thumbnails-->
